fix main margins on mobile and desktop

--- a/src/architecture/architecture.css
+++ b/src/architecture/architecture.css
@@ -28,7 +28,7 @@ body {
 
     main {
         background-color: var(--sixth-color);
-        margin: 7vh 1vw 1vh 1vw;
+        margin: 7vh 25vw 1vh 25vw;
         padding: 1.2rem;
         border-radius: 1.5rem;
         box-shadow:
@@ -115,20 +115,22 @@ video::-webkit-media-controls-panel {
 }
 
 @media (max-width: 1376px) {
-    main {
-        margin: 7vh 25vw 1vh 25vw;
+    body {
+        main {
+            margin: 7vh 1vw 1vh 1vw;
 
-        ul {
-            li div p:nth-of-type(1) {
-                margin-top: 0.5rem;
-            }
+            ul {
+                li div p:nth-of-type(1) {
+                    margin-top: 0.5rem;
+                }
 
-            li:nth-of-type(even) {
-                flex-direction: row;
-            }
+                li:nth-of-type(even) {
+                    flex-direction: row;
+                }
 
-            div {
-                text-align: left;
+                div {
+                    text-align: left;
+                }
             }
         }
     }
